# bigMAC

./: .gitignore  README.md  adll  graph.py
Conversion/: convert.conf.xml
Conversion/GraphColoring/GraphColoring-m1-mono/: GraphColoring-1-insertions-5.xml  GraphColoring-1-insertions-6.xml  GraphColoring-2-fullins-4.xml  GraphColoring-2-fullins-5.xml  GraphColoring-2-insertions-3.xml  GraphColoring-2-insertions-4.xml  (+43 more)
bigmac/: 16-8-04  AC8.c  AC8.h  BT.c  FC.c  FC.h  Makefile  PC8.c  PC8.h  RFL.c  RFL.h  bigRFL.c  bigRFL.h  bigmac  bigmac.c  bigmac.h  constant.h  depend  generateur.c  graph.py  list.c  list_i.c  list_i.h  main.c  parser.c  parser.h  poubelle  structure.c  structure.h  testing  valgrind-out.txt
bigmac/v2/: Makefile  bigmac  bigmac.c  depend  generateur.c  main.c  structure.c  structure.h  valgrind-out.txt
new/: BT.c  RFL.c  bigmac.c
old/: AC8.c  AC8.h.gch  BT.c  BT.h  CMakeLists.txt  PC8.h  bigMAC.cbp  bigMAC.depend  bigMAC.layout  bigmac.c  bigmac.h  generateur.c  generateur.h  list.h  list.h.gch  main  main.c  structure.h
old/backup/: AC8.c  AC8.h  BT.c  BT.h  FC.c  FC.h  PC8.c  RFL.c  bigmac.c  bigmac.h  generateur.c  generateur.h  list.c  main.c  structure.c
old/new/: BT.h  FC.c  PC8.c  RFL.h  main.c
script/: envoi.sh  receive.sh
src/: AC8.c  AC8.h  FC.c  FC.h  Makefile  PC8.c  RFL.c  RFL.h  bigRFL.c  bigRFL.h  bigmac  charrier@  constant.h  depend  envoi.sh  graph.py  list.h  main.c  nohup.out  parser.c  poubelle  run.sh  structure.c  structure.h  test.debug  valgrind-out.txt
src/file/: queen5-55
src/v2/: bigmac.c  bigmac.h
(+47 files in other folders)
